@@ -10,15 +10,11 @@
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Library General Public License for more details.
+ * General Public License for more details.
  *
  * You should have received a copy of the GNU General Public
  * License along with this program; if not, write to the
  * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
- *
- * Based on the equivalent widget from Evince
- * 	by Jonathan Blandford,
- * 	Copyright (C) 2004  Red Hat, Inc.
  */
 
 #include "config.h"
